--- a/mybatis-plus/pom.xml
+++ b/mybatis-plus/pom.xml
@@ -9,9 +9,36 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>web-basic</artifactId>
+    <artifactId>mybatis-plus</artifactId>
 
     <dependencies>
+
+    <!--mybatis-plus-start-->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+        </dependency>
+         <!--mybatis-plus 代码生成器-start-->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-generator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+        </dependency>
+         <!--mybatis-plus 代码生成器-end-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+    <!--mybatis-plus-end-->
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -49,5 +76,6 @@
         <!--工具类-end-->
 
     </dependencies>
+
 
 </project>
