--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,10 @@
   <groupId>cj.java.template</groupId>
   <artifactId>cj-springboot-all</artifactId>
   <version>1.0-SNAPSHOT</version>
+
   <modules>
     <module>web-basic</module>
+    <module>mybatis-plus</module>
   </modules>
 
   <packaging>pom</packaging>
@@ -57,6 +59,11 @@
         <groupId>com.baomidou</groupId>
         <artifactId>mybatis-plus-boot-starter</artifactId>
         <version>3.4.3.4</version>
+      </dependency>
+      <dependency>
+        <groupId>com.baomidou</groupId>
+        <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+        <version>3.5.1</version>
       </dependency>
       <!--mybatis-plus 代码生成器 start-->
       <dependency>
