--- a/pom.xml
+++ b/pom.xml
@@ -1,157 +1,192 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>cj.java.template</groupId>
-  <artifactId>cj-springboot-all</artifactId>
-  <version>1.0-SNAPSHOT</version>
+    <groupId>cj.java.template</groupId>
+    <artifactId>cj-springboot-all</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
-  <modules>
-    <module>web-basic</module>
-    <module>mybatis-plus</module>
-  </modules>
+    <modules>
+        <module>web-basic</module>
+        <module>mybatis-plus</module>
+        <module>redis-basic</module>
+    </modules>
 
-  <packaging>pom</packaging>
-  <name>Maven</name>
-
-
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <lombok.version>1.18.22</lombok.version>
-<!--    <cj.springboot.starter.version>2.5.9</cj.springboot.starter.version>-->
-  </properties>
-
-  <dependencyManagement>
-    <dependencies>
-      <!--spring boot 2.2.2-->
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-dependencies</artifactId>
-        <version>2.5.9</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
+    <packaging>pom</packaging>
+    <name>Maven</name>
 
 
-      <!--spring cloud alibaba 2.1.0.RELEASE-->
-      <dependency>
-        <groupId>com.alibaba.cloud</groupId>
-        <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-        <version>2.1.0.RELEASE</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <lombok.version>1.18.22</lombok.version>
+        <cj.hutool.version>5.3.10</cj.hutool.version>
+        <starter.data.redis.version>2.5.9</starter.data.redis.version>
+        <jedis.version>3.6.3</jedis.version>
+        <!--    <cj.springboot.starter.version>2.5.9</cj.springboot.starter.version>-->
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <!--spring boot 2.2.2-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>2.5.9</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
 
 
-      <!--cj universal start-->
-      <dependency>
-        <groupId>cn.com.ns.cj</groupId>
-        <artifactId>cjuniversal-spring-boot-starter</artifactId>
-        <version>2.0</version>
-      </dependency>
-      <!--cj universal end-->
-
-      <!--mybatisPlus-start-->
-      <dependency>
-        <groupId>com.baomidou</groupId>
-        <artifactId>mybatis-plus-boot-starter</artifactId>
-        <version>3.4.3.4</version>
-      </dependency>
-      <dependency>
-        <groupId>com.baomidou</groupId>
-        <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
-        <version>3.5.1</version>
-      </dependency>
-      <!--mybatis-plus 代码生成器 start-->
-      <dependency>
-        <groupId>com.baomidou</groupId>
-        <artifactId>mybatis-plus-generator</artifactId>
-        <version>3.5.1</version>
-      </dependency>
-      <dependency>
-        <groupId>org.freemarker</groupId>
-        <artifactId>freemarker</artifactId>
-        <version>2.3.31</version>
-      </dependency>
-      <!--mybatis-plus 代码生成器 end-->
-      <!--mybatisPlus-end-->
-
-      <!--star tools-->
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-validation</artifactId>
-      </dependency>
-      <!--用于@slf4j-->
-      <dependency>
-        <groupId>org.projectlombok</groupId>
-        <artifactId>lombok</artifactId>
-        <version>${lombok.version}</version>
-        <optional>true</optional>
-      </dependency>
-      <dependency>
-        <groupId>cn.hutool</groupId>
-        <artifactId>hutool-all</artifactId>
-        <version>5.3.10</version>
-      </dependency>
-      <dependency>
-        <groupId>com.github.dozermapper</groupId>
-        <artifactId>dozer-spring-boot-starter</artifactId>
-        <version>6.4.0</version>
-        <exclusions>
-          <exclusion>
-            <artifactId>commons-io</artifactId>
-            <groupId>commons-io</groupId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>commons-collections</groupId>
-        <artifactId>commons-collections</artifactId>
-        <version>3.2.2</version>
-      </dependency>
-
-      <dependency>
-        <groupId>commons-lang</groupId>
-        <artifactId>commons-lang</artifactId>
-        <version>2.6</version>
-      </dependency>
-      <dependency>
-        <groupId>javax.el</groupId>
-        <artifactId>javax.el-api</artifactId>
-        <version>3.0.0</version>
-      </dependency>
-      <dependency>
-        <groupId>org.glassfish</groupId>
-        <artifactId>javax.el</artifactId>
-        <version>3.0.0</version>
-      </dependency>
-      <!--
-      idea报错 未知的枚举常量javax.annotation.meta.When.MAYBE
-      -->
-      <dependency>
-        <groupId>com.google.code.findbugs</groupId>
-        <artifactId>annotations</artifactId>
-        <version>3.0.1</version>
-      </dependency>
-      <!--end tools-->
-
-    </dependencies>
-  </dependencyManagement>
+            <!--spring cloud alibaba 2.1.0.RELEASE-->
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>2.1.0.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
 
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-        <configuration>
-          <fork>true</fork>
-          <addResources>true</addResources>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+            <!--cj universal start-->
+            <dependency>
+                <groupId>cn.com.ns.cj</groupId>
+                <artifactId>cjuniversal-spring-boot-starter</artifactId>
+                <version>2.0</version>
+            </dependency>
+            <!--cj universal end-->
+
+            <!--redis相关-start-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>${starter.data.redis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>${jedis.version}</version>
+            </dependency>
+            <!--redis相关-end-->
+
+
+            <!--mybatisPlus-start-->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>3.4.3.4</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+                <version>3.5.1</version>
+            </dependency>
+            <!--mybatis-plus 代码生成器 start-->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-generator</artifactId>
+                <version>3.5.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.freemarker</groupId>
+                <artifactId>freemarker</artifactId>
+                <version>2.3.31</version>
+            </dependency>
+            <!--mybatis-plus 代码生成器 end-->
+            <!--mybatisPlus-end-->
+
+            <!--star tools-->
+
+            <!--常用工具类-start-->
+            <!--用于@slf4j-->
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+                <optional>true</optional>
+            </dependency>
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${cj.hutool.version}</version>
+            </dependency>
+            <!--常用工具类-end-->
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-validation</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>com.github.dozermapper</groupId>
+                <artifactId>dozer-spring-boot-starter</artifactId>
+                <version>6.4.0</version>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>commons-io</artifactId>
+                        <groupId>commons-io</groupId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>commons-collections</groupId>
+                <artifactId>commons-collections</artifactId>
+                <version>3.2.2</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>2.6</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.el</groupId>
+                <artifactId>javax.el-api</artifactId>
+                <version>3.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish</groupId>
+                <artifactId>javax.el</artifactId>
+                <version>3.0.0</version>
+            </dependency>
+            <!--
+            idea报错 未知的枚举常量javax.annotation.meta.When.MAYBE
+            -->
+            <dependency>
+                <groupId>com.google.code.findbugs</groupId>
+                <artifactId>annotations</artifactId>
+                <version>3.0.1</version>
+            </dependency>
+            <!--end tools-->
+
+        </dependencies>
+    </dependencyManagement>
+
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <fork>true</fork>
+                    <addResources>true</addResources>
+                </configuration>
+            </plugin>
+
+            <!--idea maven工程中的Language Level总是自动变到5
+                ->解决：添加如下plugin,直接指定java版本
+            -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <!-- 下面指定为自己需要的版本 -->
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+
+        </plugins>
+    </build>
 </project>
