--- a/redis-basic/pom.xml
+++ b/redis-basic/pom.xml
@@ -9,9 +9,21 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>web-basic</artifactId>
+    <artifactId>redis-basic</artifactId>
 
     <dependencies>
+
+        <!--redis配置-start-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
+        <!--redis配置-end-->
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -53,5 +65,4 @@
         <!--工具类-end-->
 
     </dependencies>
-
 </project>
