--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <module>web-basic</module>
         <module>mybatis-plus</module>
         <module>redis-basic</module>
+        <module>rabbitmq-consumer9101</module>
+        <module>rabbitmq-producer9110</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -38,6 +40,11 @@
                 <scope>import</scope>
             </dependency>
 
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-configuration-processor</artifactId>
+                <version>2.5.9</version>
+            </dependency>
 
             <!--spring cloud alibaba 2.1.0.RELEASE-->
             <dependency>
