--- a/dubbo-consumer9201/pom.xml
+++ b/dubbo-consumer9201/pom.xml
@@ -9,7 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dubbo-provider9210</artifactId>
+    <artifactId>dubbo-consumer9201</artifactId>
+
 
     <properties>
         <spring-boot.version>2.1.1.RELEASE</spring-boot.version>
@@ -96,10 +97,10 @@
              </dependency>-->
 
         <!--cj universal start-->
-<!--        <dependency>-->
-<!--            <groupId>cn.com.ns.cj</groupId>-->
-<!--            <artifactId>cjuniversal-spring-boot-starter</artifactId>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>cn.com.ns.cj</groupId>-->
+        <!--            <artifactId>cjuniversal-spring-boot-starter</artifactId>-->
+        <!--        </dependency>-->
         <!--cj universal end-->
 
         <!--工具类-start-->
